# cookiecutter-modern-ml

./: CLAUDE.md  README.md  cookiecutter.json  project.md  self_test.py
test_output/speech_asr_test/: README.md  pyproject.toml  sky_task.yaml
test_output/speech_asr_test/.github/workflows/: ci.yaml
test_output/speech_asr_test/configs/: settings.yaml
test_output/speech_asr_test/notebooks/: 01_getting_started.ipynb
test_output/speech_asr_test/speech_asr_test/: __init__.py  config.py  data_utils.py
test_output/speech_asr_test/speech_asr_test/deployment/: serve.py
test_output/speech_asr_test/tests/: test_config.py
test_output/speech_tts_test/: .gitignore  README.md  pyproject.toml  sky_task.yaml
test_output/speech_tts_test/.github/workflows/: ci.yaml
test_output/speech_tts_test/configs/: settings.yaml
test_output/speech_tts_test/notebooks/: 01_getting_started.ipynb
test_output/speech_tts_test/speech_tts_test/: __init__.py  config.py
test_output/speech_tts_test/speech_tts_test/deployment/: serve.py
test_output/speech_tts_test/tests/: test_config.py
test_output/vision_test/: README.md  pyproject.toml  sky_task.yaml
test_output/vision_test/.github/workflows/: ci.yaml
test_output/vision_test/configs/: settings.yaml
test_output/vision_test/notebooks/: 01_getting_started.ipynb
test_output/vision_test/tests/: test_config.py
test_output/vision_test/vision_test/: __init__.py  config.py
test_output/vision_test/vision_test/deployment/: serve.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  sky_task.yaml  {% if cookiecutter.docker_support == "yes" %}.dockerignore{% endif %}  {% if cookiecutter.docker_support == "yes" %}Makefile{% endif %}  {% if cookiecutter.use_docker_compose == "yes" %}docker-compose.yml{% endif %}
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/configs/: settings.yaml
{{cookiecutter.project_slug}}/notebooks/: 01_getting_started.ipynb
{{cookiecutter.project_slug}}/src/deployment/: serve.py
{{cookiecutter.project_slug}}/tests/: test_config.py
{{cookiecutter.project_slug}}/{% if cookiecutter.docker_support == "yes" %}docker/: {% endif %}Dockerfile.base  {% endif %}Dockerfile.serve  {% endif %}Dockerfile.train
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  config.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/deployment/: serve.py
