[project]
name = "vision_test"
version = "0.1.0"
description = "Vision Test"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core ML and data processing
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "scikit-learn>=1.3.0",
    "polars>=0.20.0",
    
    # Configuration and serving
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "litserve>=0.1.0",
    "taskipy>=1.12.0",
    
    # Experiment tracking
    "tracelet>=0.1.0",
    # Vision processing
    "torchvision>=0.16.0", 
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    ]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "F401",  # unused imports (for optional dependencies)
]

[tool.ruff.isort]
known-first-party = ["vision_test"]

[tool.taskipy.tasks]
lint = "ruff check vision_test tests"
format = "ruff format vision_test tests"
test = "pytest tests"
train = "accelerate launch vision_test/models/train_model.py"
serve = "python -m vision_test.deployment.serve"
